Fix navbar jumpiness on page load.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -121,6 +121,7 @@ img {
   width: 350px;
   margin-top: 9px;
   margin-bottom: 0px;
+  max-height: 40px; /* Prevent navbar jumpiness on page load */
 }
 input.gsc-input,
 .gsc-input-box,
